Added final index.html

--- a/Jumping-square/index.html
+++ b/Jumping-square/index.html
@@ -10,6 +10,13 @@
   </head>
   <body>
     <!-- main contaienr -->
-    <div class="container"></div>
+    <div class="container">
+      <div class="wrapper">
+        <div class="rubber"></div>
+        <div class="stick left-stick"></div>
+        <div class="stick right-stick"></div>
+        <div class="sqaure"></div>
+      </div>
+    </div>
   </body>
 </html>
