--- a/Landing page/index.html
+++ b/Landing page/index.html
@@ -9,5 +9,9 @@
 </head>
 <body>
     <!-- Starts here -->
+    <div class="container">
+        <div class="landing"></div>
+        <div class="bg"></div>
+    </div>
 </body>
 </html>
