--- a/Landing page/index.html
+++ b/Landing page/index.html
@@ -11,7 +11,7 @@
     <!-- Starts here -->
     <div class="container">
         <div class="landing"></div>
-        <div class="bg"></div>
+        <div class="beach"></div>
     </div>
 </body>
 </html>
