--- a/3. Ball Animation/index.html
+++ b/3. Ball Animation/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="wrapper">
+        <div class="block block-1"></div>
+        <div class="block block-2"></div>
+        <div class="ball"></div>
+    </div>
 </body>
 </html>
