--- a/4. Animated Earth/index.html
+++ b/4. Animated Earth/index.html
@@ -10,5 +10,7 @@
   </head>
   <body>
     <!-- main code  -->
+    <div class="earth-day"></div>
+    <div class="earth-night"></div>
   </body>
 </html>
