--- a/4. Animated Earth/index.html
+++ b/4. Animated Earth/index.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <!-- main code  -->
-    <div class="earth-day"></div>
-    <div class="earth-night"></div>
+    <div class="wrapper">
+      <div class="earth day"></div>
+      <div class="earth night"></div>
+    </div>
   </body>
 </html>
