--- a/5. Flower/index.html
+++ b/5. Flower/index.html
@@ -8,6 +8,25 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!--  -->
+    <div class="flower">
+      <div class="petals">
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+      </div>
+      <div class="stem">
+        <div class="leaf leat-right"></div>
+        <div class="leaf leaf-left"></div>
+      </div>
+    </div>
   </body>
 </html>
