Fixed Class Name

--- a/5. Flower/index.html
+++ b/5. Flower/index.html
@@ -24,8 +24,8 @@
         <div class="petal"></div>
       </div>
       <div class="stem">
-        <div class="leaf leat-right"></div>
         <div class="leaf leaf-left"></div>
+        <div class="leaf leaf-right"></div>
       </div>
     </div>
   </body>
