Added circle class and styles for flower

--- a/5. Flower/index.html
+++ b/5. Flower/index.html
@@ -22,6 +22,7 @@
         <div class="petal"></div>
         <div class="petal"></div>
         <div class="petal"></div>
+        <div class="circl"></div>
       </div>
       <div class="stem">
         <div class="leaf leaf-left"></div>
