--- a/5. Flower/index.html
+++ b/5. Flower/index.html
@@ -22,11 +22,11 @@
         <div class="petal"></div>
         <div class="petal"></div>
         <div class="petal"></div>
-        <div class="circl"></div>
+        <div class="circle"></div>
       </div>
       <div class="stem">
-        <div class="leaf leaf-left"></div>
         <div class="leaf leaf-right"></div>
+        <div class="leaf leaf-left"></div>
       </div>
     </div>
   </body>
