--- a/6. Atom Animation/index.html
+++ b/6. Atom Animation/index.html
@@ -9,5 +9,16 @@
   </head>
   <body>
     <!-- Code -->
+    <div class="wrapper">
+      <div class="circle circle-1">
+        <div class="ball ball-1"></div>
+      </div>
+      <div class="circle circle-2">
+        <div class="ball ball-2"></div>
+      </div>
+      <div class="circle circle-3">
+        <div class="ball ball-3"></div>
+      </div>
+    </div>
   </body>
 </html>
