--- a/7. Animated Navigation/index.html
+++ b/7. Animated Navigation/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <nav class="active" id="nav">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Works</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+      <button class="icon" id="toggle">
+        <div class="line line1"></div>
+        <div class="line line2"></div>
+      </button>
+    </nav>
     <!-- script src -->
     <script defer src="script.js"></script>
   </body>
