--- a/8. Helicopter/index.html
+++ b/8. Helicopter/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!--  -->
+    <div class="container">
+      <div class="helicopter">
+        <div class="blade">
+          <div class="main-rator"></div>
+        </div>
+        <div class="mast"></div>
+        <div class="cockpit"></div>
+        <div class="landing-skid landing-skid-1"></div>
+        <div class="landing-skid landing-skid-2"></div>
+        <div class="tail-cone"></div>
+        <div class="tail-fin"></div>
+        <div class="tail-rotor"></div>
+      </div>
+    </div>
   </body>
 </html>
