Fixed class Name & added style for blades

--- a/8. Helicopter/index.html
+++ b/8. Helicopter/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="helicopter">
         <div class="blade">
-          <div class="main-rator"></div>
+          <div class="main-rotor"></div>
         </div>
         <div class="mast"></div>
         <div class="cockpit"></div>
